--- a/templates/menu/partials/_carrito_contenido.html
+++ b/templates/menu/partials/_carrito_contenido.html
@@ -31,3 +31,12 @@
     <p class="text-muted">Tu carrito está vacío.</p>
   {% endif %}
 </div>
+
+<script>
+  document.dispatchEvent(new CustomEvent("carrito:actualizarContador", {
+    detail: {
+      total: {{ total_items|default:0 }}
+    }
+  }));
+</script>
+
