Fix main app name and title

--- a/templates/common/_navbar.html
+++ b/templates/common/_navbar.html
@@ -16,7 +16,7 @@
       <!-- Branding -->
 {#      <a class="navbar-brand ms-2 {% if DEBUG %}text-danger{% else %}text-white{% endif %}" href="{% url 'core:index' %}">#}
       <a class="navbar-brand ms-2 {% if DEBUG %}text-danger{% else %}text-white{% endif %}">
-        Pollo Fito Menú
+        Fito Menú
       </a>
     </div>
     <!-- User dropdown -->
