Fix shopping car confirm button
Fix the shopping car confirm buttton to refresh the data of the car after the user confirm the order

--- a/templates/menu/partials/_carrito_contenido.html
+++ b/templates/menu/partials/_carrito_contenido.html
@@ -2,7 +2,15 @@
   <h5 class="offcanvas-title">
     Tu Pedido
     {% if pedido %}
-      <span class="badge text-bg-secondary ms-2">{{ pedido.get_estado_display }}</span>
+      <span class="badge
+        {% if pedido.estado == 'confirmacion' %}bg-warning
+        {% elif pedido.estado == 'preparacion' %}bg-info
+        {% elif pedido.estado == 'entregado' %}bg-success
+        {% elif pedido.estado == 'cancelado' %}bg-danger
+        {% else %}bg-secondary{% endif %}
+        ms-2">
+        {{ pedido.get_estado_display }}
+      </span>
     {% endif %}
   </h5>
   <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Cerrar"></button>
@@ -52,14 +60,22 @@
       <p class="fw-bold text-end">Total: ${{ pedido.precio_total }}</p>
 
       {% if pedido.estado == "confirmacion" %}
-        <button class="btn btn-success w-100"
-                hx-post="{% url 'menu:confirmar_pedido' %}"
-                hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
-                hx-swap="none"
-                hx-trigger="click"
-                onclick="ocultarCarrito(); mostrarToast('Pedido confirmado y enviado a cocina.', 'success')">
-          Confirmar Pedido
-        </button>
+{#        <button class="btn btn-success w-100"#}
+{#                hx-post="{% url 'menu:confirmar_pedido' %}"#}
+{#                hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'#}
+{#                hx-swap="none"#}
+{#                hx-trigger="click"#}
+{#                onclick="ocultarCarrito(); mostrarToast('Pedido confirmado y enviado a cocina.', 'success')">#}
+{#          Confirmar Pedido#}
+{#        </button>#}
+          <button class="btn btn-success w-100"
+            hx-post="{% url 'menu:confirmar_pedido' %}"
+            hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
+            hx-target="#carritoOffcanvas .offcanvas-body"
+            hx-swap="innerHTML"
+            hx-trigger="click">
+            Confirmar Pedido
+          </button>
       {% else %}
         <button class="btn btn-primary w-100"
                 data-bs-dismiss="offcanvas"
