Add new feature General Configuration
This feature allowed the administrator to edit the general information of the restaurant to show in the app

--- a/templates/common/_navbar.html
+++ b/templates/common/_navbar.html
@@ -18,7 +18,7 @@
 {#      <a class="navbar-brand ms-2 {% if DEBUG %}text-danger{% else %}text-white{% endif %}" href="{% url 'core:index' %}">#}
       <a class="navbar-brand d-flex align-items-center gap-2 ms-2 {% if DEBUG %}text-danger{% else %}text-white{% endif %}" href="{% url 'menu:menu_lista' %}">
         <img src="{% static 'logo.jpg' %}" alt="Logo Pollo Fito" height="40" class="rounded shadow-sm">
-        <span>Pollo Fito Menú</span>
+        <span>{{ info_restaurante.nombre|default:"Pollo Fito" }}</span>
       </a>
     </div>
     <!-- User dropdown -->
@@ -38,9 +38,10 @@
                   <li><a class="dropdown-item" href="{% url 'menu:conocenos' %}">Conócenos</a></li>
             {% else %}
                 <li><a class="dropdown-item" href="{% url 'admin_panel:lista_ordenes' %}">Órdenes</a></li>
-                <li><a class="dropdown-item" href="{% url 'admin_panel:lista_productos' %}">Productos</a></li>
                 <li><a class="dropdown-item" href="{% url 'kitchen:kitchen_panel' %}">Cocina</a></li>
+                <li><a class="dropdown-item" href="{% url 'admin_panel:lista_productos' %}">Productos</a></li>
                 <li><a class="dropdown-item" href="{% url 'menu:menu_lista' %}">Menú</a></li>
+                <li><a class="dropdown-item" href="{% url 'admin_panel:editar_info_restaurante' %}">Configuración</a></li>
             {% endif %}
           {% endif %}
       </ul>
