--- a/templates/menu/conocenos.html
+++ b/templates/menu/conocenos.html
@@ -7,7 +7,7 @@
   <div class="row align-items-center mb-5">
     <div class="col-md-6">
       <h2 class="mb-3">Nuestra Historia</h2>
-      <p>Pollo Fito nació como un pequeño emprendimiento familiar en Santa Ana, El Salvador, con el sueño de ofrecer el mejor pollo frito de la ciudad. A lo largo de los años, nos hemos ganado el corazón de nuestros clientes gracias al sabor único de nuestras recetas tradicionales y al trato cálido que brindamos en cada visita.</p>
+      <p>{{ info.historia|linebreaks }}</p>
     </div>
     <div class="col-md-6">
       <img src="{% static 'logo.jpg' %}" class="img-fluid rounded shadow" alt="Nuestra historia">
