--- a/templates/admin_panel/info_restaurante_form.html
+++ b/templates/admin_panel/info_restaurante_form.html
@@ -24,6 +24,22 @@
         </div>
 
         <div class="mb-3">
+          <label class="form-label">Ubicación</label>
+          {{ form.ubicacion }}
+        </div>
+
+        <div class="mb-3">
+          <label class="form-label">Facebook (URL)</label>
+          {{ form.facebook_url }}
+        </div>
+
+        <div class="mb-3">
+          <label class="form-label">Instagram (URL)</label>
+          {{ form.instagram_url }}
+        </div>
+
+
+        <div class="mb-3">
             <label class="form-label">Iframe de ubicación (HTML)</label>
             {{ form.iframe_ubicacion }}
         </div>
