Add dashboard feature on admin_panel app

--- a/templates/common/_navbar.html
+++ b/templates/common/_navbar.html
@@ -41,6 +41,7 @@
                 <li><a class="dropdown-item" href="{% url 'kitchen:kitchen_panel' %}">Cocina</a></li>
                 <li><a class="dropdown-item" href="{% url 'admin_panel:lista_productos' %}">Productos</a></li>
                 <li><a class="dropdown-item" href="{% url 'menu:menu_lista' %}">Menú</a></li>
+                <li><a class="dropdown-item" href="{% url 'admin_panel:dashboard' %}">Dashboard</a></li>
                 <li><a class="dropdown-item" href="{% url 'admin_panel:editar_info_restaurante' %}">Configuración</a></li>
             {% endif %}
           {% endif %}
