--- a/templates/admin_panel/info_restaurante_form.html
+++ b/templates/admin_panel/info_restaurante_form.html
@@ -29,6 +29,16 @@
         </div>
 
         <div class="mb-3">
+          <label class="form-label">Teléfono</label>
+          {{ form.telefono }}
+        </div>
+
+        <div class="mb-3">
+          <label class="form-label">Correo electrónico</label>
+          {{ form.correo }}
+        </div>
+
+        <div class="mb-3">
           <label class="form-label">Facebook (URL)</label>
           {{ form.facebook_url }}
         </div>
