--- a/templates/admin_panel/producto_form.html
+++ b/templates/admin_panel/producto_form.html
@@ -39,8 +39,8 @@
                 </div>
 
                 <div class="d-flex justify-content-end mt-4">
-                    <button type="submit" class="btn btn-primary btn-lg me-2">Guardar</button>
-                    <a href="{% url 'admin_panel:lista_productos' %}" class="btn btn-secondary btn-lg">Cancelar</a>
+                    <button type="submit" class="btn btn-primary btn-md me-2">Guardar</button>
+                    <a href="{% url 'admin_panel:lista_productos' %}" class="btn btn-secondary btn-md">Cancelar</a>
                 </div>
             </div>
         </div>
