Add whatsapp contact on footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -67,6 +67,10 @@
                 {% endif %}
               </div>
               <div class="col-md-3 mb-3">
+                <h6 class="text-uppercase text-primary">¡Ahora puedes ordenar a Domicilio!</h6>
+                <a href="https://wa.me/503{{ info_restaurante.telefono }}" target="_blank"><i class="bi bi-whatsapp"></i></a>
+                <br/>
+                <br/>
                 <h6 class="text-uppercase">Contactanos</h6>
                   {% if info_restaurante.telefono %}
                     <p class="mb-1"><i class="bi bi-telephone"></i> {{ info_restaurante.telefono }}</p>
