--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"/>
     <meta name="csrf-token" content="{{ csrf_token }}">
+
+    <!-- Web Positioning -->
+    <!-- SEO Meta -->
+    <meta name="description" content="Disfruta el auténtico sabor de Pollo Fito: Papas, choripanes, bebidas y más.">
+    <meta name="keywords" content="Pollo Fito, menu, restaurante, pollo frito, comida rapida, choripanes, Santa Ana, El Salvador, papas, choripanes, nachos">
+    <meta name="author" content="Pollo Fito">
+
+    <!-- Favicon -->
+    <link type="image/x-icon" rel="icon" href="{% static 'favicon.ico' %}"/>
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="{% block og_title %}Pollo Fito - Menú Digital{% endblock %}">
+    <meta property="og:description" content="{% block og_description %}Explora nuestro delicioso menú de pollo frito, combos, bebidas y más.{% endblock %}">
+    <meta property="og:image" content="{% block og_image %}{% static 'logo.jpg' %}{% endblock %}">
+    <meta property="og:url" content="https://pollofito.com/">
+    <meta property="og:type" content="website">
+
+    <!-- X Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="{% block twitter_title %}Pollo Fito - Menú Digital{% endblock %}">
+    <meta name="twitter:description" content="{% block twitter_description %}Ordena tu comida favorita solo en Pollo Fito.{% endblock %}">
+    <meta name="twitter:image" content="{% block twitter_image %}{% static 'logo.jpg' %}{% endblock %}">
+
     <title>Fito {% if page_title %} | {{ page_title }} {% endif %}</title>
     <link type="image/x-icon" rel="icon" href="{% static 'favicon.ico' %}"/>
     <link type="text/css" rel="stylesheet" href="{% static 'css/main.css' %}"/>
